--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # VPC Configuration
-VPC_ID=vpc-08b9c4e30b465228d
-VPC_CIDR=172.31.0.0/16
-PUBLIC_SUBNET_IDS=subnet-02cb8e42814ca2414,subnet-021f5b28ea8af82cd
+VPC_ID=vpc-xxxx
+VPC_CIDR=xx.xx.xx.xx/16
+PUBLIC_SUBNET_IDS=subnet-xxxx,subnet-xxxx
 
 # Global Accelerator Configuration
-ENABLE_GLOBAL_ACCELERATOR=true
+ENABLE_GLOBAL_ACCELERATOR=false
 
 # AWS Region Configuration (optional)
-AWS_REGION=ap-northeast-1
+AWS_REGION=us-east-1
