--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 # VPC Configuration
 VPC_ID=vpc-xxxx
-VPC_CIDR=xx.xx.xx.xx/16
-PUBLIC_SUBNET_IDS=subnet-xxxx,subnet-xxxx
+PUBLIC_SUBNET_IDS=subnet-xxx,subnet-yyy
+
+# NLB Configuration
+NLB_SECURITY_GROUP=0.0.0.0/0
 
 # Global Accelerator Configuration
 ENABLE_GLOBAL_ACCELERATOR=false
